unpackaged/main/default/objects/genesis__Employment_Information__c/genesis__Employment_Information__c.object-meta.xml
<CustomObject>
    <label>Employment Information</label>
    <nameField>
        <label>Employment Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>