unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Employer_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>genesis__Employer_Zipcode__c</fullName>
    <label>Employer Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>