unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Name_of_employer__c.field-meta.xml
<CustomField>
    <fullName>genesis__Name_of_employer__c</fullName>
    <label>Name of employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>