unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Number_of_years_on_job__c.field-meta.xml
<CustomField>
    <fullName>genesis__Number_of_years_on_job__c</fullName>
    <label>Number of years on job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>