unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Position__c.field-meta.xml
<CustomField>
    <fullName>genesis__Position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>