unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>genesis__Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Employed</label>
    <type>Checkbox</type>
</CustomField>