unpackaged/main/default/objects/genesis__Employment_Information__c/fields/genesis__Type_of_business__c.field-meta.xml
<CustomField>
    <fullName>genesis__Type_of_business__c</fullName>
    <label>Type of business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>