unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Income_Include_Bonuses_or_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Income_Include_Bonuses_or_Commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Include Bonuses or Commissions</label>
    <type>Checkbox</type>
</CustomField>