unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Neo_Verify__c.field-meta.xml
<CustomField>
    <fullName>Neo_Verify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neo Verify</label>
    <referenceTo>Neo_Verify__c</referenceTo>
    <relationshipLabel>Employment Information</relationshipLabel>
    <relationshipName>Employment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>