unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Next_Paydate_estimate__c.field-meta.xml
<CustomField>
    <fullName>Next_Paydate_estimate__c</fullName>
    <label>Next Paydate (estimate)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>