unpackaged/main/default/objects/genesis__Employment_Information__c/fields/No_of_Paychecks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Paychecks__c</fullName>
    <label>No. of Paychecks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>