unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <label>Pay Frequency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>