unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Payroll_Dates__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Dates__c</fullName>
    <label>Payroll Dates</label>
    <length>30</length>
    <type>Text</type>
</CustomField>