unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Previous_occupation__c.field-meta.xml
<CustomField>
    <fullName>Previous_occupation__c</fullName>
    <label>Previous_occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>