unpackaged/main/default/objects/genesis__Employment_Information__c/fields/Send_work_email_verification_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_work_email_verification_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked by click of button on application. Used to trigger work email alert</description>
    <label>Send work email verification Email</label>
    <type>Checkbox</type>
</CustomField>