unpackaged/main/default/objects/genesis__Employment_Information__c/fields/WorkEmailKeyCode__c.field-meta.xml
<CustomField>
    <fullName>WorkEmailKeyCode__c</fullName>
    <description>random key code generated when work email address is changed. Used in Work Email Verification email.</description>
    <label>WorkEmailKeyCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>