unpackaged/main/default/objects/genesis__Employment_Information__c/fields/WorkEmailKeyCodeResponse__c.field-meta.xml
<CustomField>
    <fullName>WorkEmailKeyCodeResponse__c</fullName>
    <description>work email verification key code sent by front end system to validate against WorkEmailKeyCode generated when work email was updated.</description>
    <label>WorkEmailKeyCodeResponse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>