unpackaged/main/default/objects/genesis__Employment_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Application__c</columns>
    <columns>genesis__Name_of_employer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>genesis__Application__c</field>
        <operation>equals</operation>
        <value>APP-0001403682</value>
    </filters>
    <label>All</label>
</ListView>